--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,15 @@
                     increibles que se pueden hacer con ramas
 
                 </p>
+                <p>
+                    los blog son la mejor forma de compartir
+                  <p>  informacion y tus ideas.
+                    Mucho mas que ir a conferencias o salir en youtube.</p>
+                    excepto si eres un rockstar . pero estadisticamente no lo eres 
+                    ....... por ahora.
+
+
+                </p>
     
  
             </div>
