--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline" >tu blog de confianza</span>
+                <span id="tagline" >tu blog maestro</span>
                 
             </div>
             <div id="post">
@@ -29,6 +29,7 @@
 
 
                 </p>
+                <p>Suscribete y dale like</p>
     
  
             </div>
